--- a/index.html
+++ b/index.html
@@ -131,17 +131,17 @@
       <div class="columnL marginR">
         <div class="box">
           <div class="image-container">
-            <img src="assets/proj1.jpg" class="image" />
+            <img src="/assets/proj1.jpg" class="image" />
           </div>
         </div>
         <div class="box">
           <div class="image-container">
-            <img src="assets/proj3.jpg" class="image" />
+            <img src="/assets/proj3.jpg" class="image" />
           </div>
         </div>
         <div class="box">
           <div class="image-container">
-            <img src="assets/proj5.jpg" class="image" />
+            <img src="/assets/proj5.jpg" class="image" />
           </div>
         </div>
       </div>
@@ -149,17 +149,17 @@
       <div class="columnR">
         <div class="box">
           <div class="image-container">
-            <img src="assets/proj2.jpg" class="image" />
+            <img src="/assets/proj2.jpg" class="image" />
           </div>
         </div>
         <div class="box">
           <div class="image-container">
-            <img src="assets/proj4.jpg" class="image" />
+            <img src="/assets/proj4.jpg" class="image" />
           </div>
         </div>
         <div class="box">
           <div class="image-container">
-            <img src="assets/proj6.jpg" class="image" />
+            <img src="/assets/proj6.jpg" class="image" />
           </div>
         </div>
       </div>
