--- a/index.html
+++ b/index.html
@@ -3,14 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Felix的个人网站</title>
+    <title>丰空间</title>
     <style>
       body {
         margin: 0;
         background-color: #e3e3e3;
       }
-      .flex {
+      .main {
         display: flex;
+        flex-direction: row;
       }
       .container {
         display: flex;
@@ -80,9 +81,18 @@
         width: 200px;
         height: 100vh;
         z-index: 2;
-        display: flex;
         flex-direction: column;
-        height: 100vh;
+      }
+      .headContainer {
+        position: fixed;
+        top: 0;
+        left: 0;
+        display: none;
+        width: 100vh;
+        height: 60px;
+        z-index: 2;
+        flex-direction: column;
+        background-color: #e3e3e3;
       }
 
       .middleText {
@@ -110,15 +120,25 @@
         .hideSideBar {
           display: none;
         }
+        .showHeadBar {
+          display: flex;
+        }
         .margin {
           margin: 25px;
         }
         .marginR {
           margin-right: 10px;
         }
+        .newMarginTop {
+          margin-top: 70px;
+        }
         .box {
-          height: 300px;
+          height: 250px;
           margin-top: 15px;
+          border-radius: 15px;
+        }
+        .image-container {
+          border-radius: 15px;
         }
         .image {
           transform: scale(1);
@@ -130,7 +150,13 @@
       }
     </style>
   </head>
-  <body class="flex">
+  <body class="main">
+    <!--头部栏-->
+    <div style="height: 80px; z-index: 2" class="headContainer showHeadBar">
+      <div style="padding: 20px">
+        <img src="assets/protrait.png" width="50px" height="50px" alt="头像" />
+      </div>
+    </div>
     <!--侧边栏-->
     <div style="width: 200px; z-index: 2" class="sideContainer hideSideBar">
       <!--头像栏-->
@@ -159,7 +185,7 @@
     </div>
     <div style="width: 200px" class="hideSideBar"></div>
     <!--主区域-->
-    <div class="container margin">
+    <div class="container margin newMarginTop">
       <!--左侧内容-->
       <div class="columnL marginR">
         <div class="box">
@@ -176,6 +202,9 @@
           <div class="image-container">
             <img src="assets/proj5.jpg" class="image" />
           </div>
+        </div>
+        <div class="box">
+          <div class="image-container"></div>
         </div>
       </div>
       <!--右侧内容-->
@@ -194,6 +223,9 @@
           <div class="image-container">
             <img src="assets/proj6.jpg" class="image" />
           </div>
+        </div>
+        <div class="box">
+          <div class="image-container"></div>
         </div>
       </div>
     </div>
