--- a/index.html
+++ b/index.html
@@ -4,6 +4,57 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>丰空间</title>
+    <script>
+      document.addEventListener("DOMContentLoaded", function () {
+        const boxes = document.querySelectorAll(".box");
+
+        boxes.forEach((box) => {
+          box.addEventListener("click", function () {
+            if (window.innerWidth <= 800) {
+              // 应用透明度
+              applyOpacity(this, "1");
+              // 5秒后重置透明度
+              setTimeout(() => {
+                resetOpacity(this);
+              }, 5000);
+            }
+          });
+        });
+
+        // 监听屏幕尺寸变化
+        window.addEventListener("resize", function () {
+          if (window.innerWidth > 800) {
+            boxes.forEach((box) => {
+              resetOpacity(box);
+            });
+          }
+        });
+      });
+
+      // 应用透明度函数
+      function applyOpacity(element, value) {
+        const textImage1 = element.querySelector(".textImage1");
+        const textImage2 = element.querySelector(".textImage2");
+        const textImage3 = element.querySelector(".textImage3");
+        const textShadow = element.querySelector(".textShadow");
+        textImage1.style.opacity = value;
+        textImage2.style.opacity = value;
+        textImage3.style.opacity = value;
+        textShadow.style.opacity = value;
+      }
+
+      // 重置透明度函数
+      function resetOpacity(element) {
+        const textImage1 = element.querySelector(".textImage1");
+        const textImage2 = element.querySelector(".textImage2");
+        const textImage3 = element.querySelector(".textImage3");
+        const textShadow = element.querySelector(".textShadow");
+        textImage1.style.opacity = "";
+        textImage2.style.opacity = "";
+        textImage3.style.opacity = "";
+        textShadow.style.opacity = "";
+      }
+    </script>
     <style>
       body {
         margin: 0;
@@ -12,6 +63,7 @@
       .main {
         display: flex;
         flex-direction: row;
+        font-family: sans-serif;
       }
       .container {
         display: flex;
@@ -38,9 +90,7 @@
         border-radius: 30px;
         box-shadow: 2px 7px 20px 0px rgba(0, 0, 0, 0.2);
         margin-top: 30px;
-
         transition: transform 0.5s ease, box-shadow 0.5s ease;
-
         position: relative;
       }
       .box:hover {
@@ -48,7 +98,7 @@
         box-shadow: 10px 15px 30px 0px rgba(0, 0, 0, 0.4);
       }
       .image-container {
-        position: relative;
+        position: absolute;
         overflow: hidden;
         width: 100%;
         height: 100%;
@@ -101,23 +151,99 @@
         display: flex;
         align-items: center;
       }
+      /* ================文字样式================ */
+      .text-container {
+        display: flex;
+        height: 93%;
+        flex-direction: column;
+        justify-content: flex-end;
+        align-items: flex-start;
+        position: absolute;
+        padding-left: 10%;
+        padding-right: 10%;
+      }
+      .text-container2 {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        flex-wrap: wrap;
+      }
+      .textImage1,
+      .textImage2,
+      .textImage3 {
+        pointer-events: none;
+        opacity: 0;
+        shape-rendering: auto;
+        color: white;
+        z-index: 2;
+      }
+      .textImage1 {
+        font-size: 30px;
+        font-weight: 600;
+        margin-bottom: 0px;
+        transition: opacity 1s ease;
+      }
+      .textImage2 {
+        font-size: 15px;
+        font-weight: 300;
+        transition: opacity 2s ease;
+      }
+      .textImage3 {
+        font-size: 15px;
+        font-weight: 400;
+        border-radius: 20px;
+        border: 1px;
+        padding-left: 10px;
+        padding-right: 10px;
+        margin-left: 6px;
+        border: 1px solid rgb(255, 255, 255);
+        background-color: rgb(0, 0, 0, 0.3);
+        transition: opacity 2s ease;
+      }
+      .textShadow {
+        position: absolute;
+        z-index: 1;
+        pointer-events: none;
+        width: 100%;
+        height: 30%;
+        bottom: 0px;
+        background-image: linear-gradient(
+          to bottom,
+          rgb(0, 0, 0, 0),
+          rgb(0, 0, 0, 0.6)
+        );
+        opacity: 0;
+        transition: opacity 1s ease;
+      }
 
       .text1 {
         font-size: 16px;
         font-weight: 600;
-        color: rgb(123, 123, 123);
+        color: rgb(138, 138, 138);
+        height: 15px;
+        margin-top: 30px;
       }
       .text2 {
         font-size: 16px;
         font-weight: 500;
+        height: 10px;
       }
       .text3 {
         font-size: 14px;
         font-weight: 400;
       }
 
+      /* ================多屏幕================ */
+      @media (min-width: 801px) {
+        .box:hover .textImage1,
+        .box:hover .textImage2,
+        .box:hover .textImage3,
+        .box:hover .textShadow {
+          opacity: 1;
+        }
+      }
       @media (max-width: 800px) {
-        .hideSideBar {
+        .hide {
           display: none;
         }
         .showHeadBar {
@@ -127,25 +253,48 @@
           margin: 25px;
         }
         .marginR {
-          margin-right: 10px;
+          margin-right: 12px;
         }
         .newMarginTop {
-          margin-top: 70px;
+          margin-top: 80px;
         }
         .box {
-          height: 250px;
-          margin-top: 15px;
-          border-radius: 15px;
+          height: 200px;
+          margin-top: 12px;
+          border-radius: 20px;
+          box-shadow: 1px 4px 7px 0px rgba(0, 0, 0, 0.2);
         }
         .image-container {
-          border-radius: 15px;
+          border-radius: 20px;
         }
         .image {
           transform: scale(1);
-          opacity: 1;
+          opacity: 0.8;
         }
         .container {
           width: 100%;
+        }
+        .textImage1 {
+          font-size: 18px;
+          bottom: 32%;
+        }
+        .textImage2 {
+          font-size: 12px;
+        }
+        .textImage3 {
+          font-size: 11px;
+          margin: 0;
+          padding-left: 5px;
+          padding-right: 5px;
+        }
+
+        .textShadow {
+          height: 60%;
+          background-image: linear-gradient(
+            to bottom,
+            rgb(0, 0, 0, 0),
+            rgb(0, 0, 0, 0.9)
+          );
         }
       }
     </style>
@@ -158,7 +307,7 @@
       </div>
     </div>
     <!--侧边栏-->
-    <div style="width: 200px; z-index: 2" class="sideContainer hideSideBar">
+    <div style="width: 200px; z-index: 2" class="sideContainer hide">
       <!--头像栏-->
       <div style="height: 30px"></div>
       <div style="padding: 30px; align-items: center; justify-content: center">
@@ -172,10 +321,15 @@
       <div class="middleText">
         <div>
           <p class="text1">设计</p>
-          <p class="text2">代码与硬件</p>
-          <p class="text2">虚构游戏</p>
-          <p class="text2">虚构游戏</p>
-          <p class="text2">虚构游戏</p>
+          <p class="text2">硬件编程</p>
+          <p class="text2">独立游戏</p>
+          <p class="text2">三维影像</p>
+          <p class="text2">交互体验</p>
+          <p class="text1">影像</p>
+          <p class="text2">摄影</p>
+          <p class="text2">视频</p>
+          <p class="text2"></p>
+          <p class="text2"></p>
         </div>
       </div>
       <!-- 底部文字 -->
@@ -183,23 +337,59 @@
         <p class="text3">邮箱: 1498367482@qq.com</p>
       </div>
     </div>
-    <div style="width: 200px" class="hideSideBar"></div>
+    <div style="width: 200px" class="hide"></div>
     <!--主区域-->
     <div class="container margin newMarginTop">
       <!--左侧内容-->
       <div class="columnL marginR">
         <div class="box">
+          <div class="text-container">
+            <div class="text-container2">
+              <div class="textImage1">色彩和声</div>
+              <div class="textImage3">实验音乐</div>
+              <div class="textImage3 hide">交互装置</div>
+              <div class="textImage3 hide">编程</div>
+            </div>
+
+            <div class="textImage2">
+              实验音乐装置。用python代码在色彩和音乐之间架起桥梁，利用颜色演奏音乐。
+            </div>
+          </div>
           <div class="image-container">
+            <div class="textShadow"></div>
             <img src="assets/proj1.jpg" class="image" />
           </div>
         </div>
         <div class="box">
+          <div class="text-container">
+            <div class="text-container2">
+              <div class="textImage1">天空之城</div>
+              <div class="textImage3">游戏开发</div>
+              <div class="textImage3 hide">体验设计</div>
+              <div class="textImage3 hide">编程</div>
+            </div>
+            <div class="textImage2">
+              体验性游戏。打造绚丽的天空之城，模拟无人机的飞行体验。
+            </div>
+          </div>
           <div class="image-container">
+            <div class="textShadow"></div>
             <img src="assets/proj3.jpg" class="image" />
           </div>
         </div>
         <div class="box">
+          <div class="text-container">
+            <div class="text-container2">
+              <div class="textImage1">旋律丛林</div>
+              <div class="textImage3">体验设计</div>
+              <div class="textImage3 hide">系统设计</div>
+            </div>
+            <div class="textImage2">
+              一个公共互动音乐装置。让音乐成为连接个人、商店和社区的纽带，使城市文化焕发活力。
+            </div>
+          </div>
           <div class="image-container">
+            <div class="textShadow"></div>
             <img src="assets/proj5.jpg" class="image" />
           </div>
         </div>
@@ -210,17 +400,51 @@
       <!--右侧内容-->
       <div class="columnR">
         <div class="box">
+          <div class="text-container">
+            <div class="text-container2">
+              <div class="textImage1">电欢喜</div>
+              <div class="textImage3">游戏设计</div>
+              <div class="textImage3 hide">思辩设计</div>
+              <div class="textImage3 hide">编程</div>
+            </div>
+            <div class="textImage2">
+              剧情探索性独立游戏。游戏设定:穷人被世界抛弃，沉迷于电子娱乐。讽刺娱乐至死。
+            </div>
+          </div>
           <div class="image-container">
+            <div class="textShadow"></div>
             <img src="assets/proj2.jpg" class="image" />
           </div>
         </div>
         <div class="box">
+          <div class="text-container">
+            <div class="text-container2">
+              <div class="textImage1">意识花园</div>
+              <div class="textImage3">三维设计</div>
+              <div class="textImage3 hide">思辩设计</div>
+              <div class="textImage3 hide">动态影像</div>
+            </div>
+            <div class="textImage2">
+              三维艺术短片。讽刺以自我为中心的，企图重塑外部世界甚至自我的欲望。
+            </div>
+          </div>
           <div class="image-container">
+            <div class="textShadow"></div>
             <img src="assets/proj4.jpg" class="image" />
           </div>
         </div>
         <div class="box">
+          <div class="text-container">
+            <div class="text-container2">
+              <div class="textImage1">摄影画廊</div>
+              <div class="textImage3">摄影</div>
+            </div>
+            <div class="textImage2">
+              雪山，星空，大海，湖海，我喜爱穿越万水千山，收集世间的美！
+            </div>
+          </div>
           <div class="image-container">
+            <div class="textShadow"></div>
             <img src="assets/proj6.jpg" class="image" />
           </div>
         </div>
