--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
         display: none;
         width: 100vh;
         height: 60px;
-        z-index: 2;
+        z-index: 5;
         flex-direction: column;
         background-color: #e3e3e3;
       }
@@ -280,6 +280,7 @@
         }
         .textImage2 {
           font-size: 11px;
+          line-height: 1.2;
         }
         .textImage3 {
           font-size: 11px;
