--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
         left: 0;
         display: none;
         width: 100vh;
-        height: 60px;
+        height: 80px;
         z-index: 6;
         flex-direction: column;
         background-color: #e3e3e3;
@@ -302,7 +302,7 @@
   </head>
   <body class="main">
     <!--头部栏-->
-    <div style="height: 80px; z-index: 2" class="headContainer showHeadBar">
+    <div class="headContainer showHeadBar">
       <div style="padding: 20px">
         <img src="assets/protrait.png" width="50px" height="50px" alt="头像" />
       </div>
