--- a/index.html
+++ b/index.html
@@ -135,8 +135,6 @@
       }
       .headContainer {
         position: fixed;
-        top: 0;
-        left: 0;
         display: none;
         width: 100vh;
         height: 80px;
@@ -395,7 +393,19 @@
           </div>
         </div>
         <div class="box">
-          <div class="image-container"></div>
+          <div class="text-container">
+            <div class="text-container2">
+              <div class="textImage1">视频集锦</div>
+              <div class="textImage3">视频</div>
+            </div>
+            <div class="textImage2">
+              动态影像的创作，讲述一段故事，讲述一段光阴。
+            </div>
+          </div>
+          <div class="image-container">
+            <div class="textShadow"></div>
+            <img src="assets/video.jpg" class="image" />
+          </div>
         </div>
       </div>
       <!--右侧内容-->
@@ -441,7 +451,7 @@
               <div class="textImage3">摄影</div>
             </div>
             <div class="textImage2">
-              雪山，星空，大海，湖海，我喜爱穿越万水千山，收集世间的美！
+              雪山，星空，大海，湖海，我喜爱穿越万水千山，收集世间的浪漫。
             </div>
           </div>
           <div class="image-container">
@@ -450,7 +460,21 @@
           </div>
         </div>
         <div class="box">
-          <div class="image-container"></div>
+          <div class="text-container">
+            <div class="text-container2">
+              <div class="textImage1">同济小龙</div>
+              <div class="textImage3">IP设计</div>
+              <div class="textImage3">雕刻建模</div>
+              <div class="textImage3">角色动画</div>
+            </div>
+            <div class="textImage2">
+              2024年，新年快乐！这是同济2024新年红包封面的虚拟形象。
+            </div>
+          </div>
+          <div class="image-container">
+            <div class="textShadow"></div>
+            <img src="assets/dragon.jpg" class="image" />
+          </div>
         </div>
       </div>
     </div>
